<resources>
    <string name="app_name">Kantidroid</string>
    <string name="url_timetable">http://www.gr.ch/DE/institutionen/verwaltung/ekud/ahb/bks/dokumentation/klassen/Documents/</string>
    <string name="overview">Übersicht</string>
    <string name="kiss">KISS</string>
    <string name="backup">Backup</string>
    <string name="subjects">Fächer</string>
    <string name="feedback">Feedback</string>
    <string name="about">Über</string>
    <string name="name">Name</string>
    <string name="name_short">Abkürzung</string>
    <string name="promotion">Promotionsfach</string>
    <string name="ask_autosubjects">Du hast im Moment noch keine Fächer.\nSollen automatisch einige häufig benutzte Fächer erstellt werden?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="cancel">Abbrechen</string>
    <string name="enter_name">Gib einen Namen und eine Abkürzung ein</string>
    <string name="too_long">Abkürzung darf nicht länger als 5 Zeichen sein</string>
    <string name="save">SPEICHERN</string>
    <string name="n2">2</string>
    <string name="n4">4</string>
    <string name="n6">6</string>
    <string name="n8">8</string>
    <string-array name="subjects_standard">
        <item>Deutsch</item>
        <item>Französisch</item>
        <item>Englisch</item>
        <item>Mathematik</item>
        <item>Biologie</item>
        <item>Chemie</item>
        <item>Physik</item>
        <item>Geografie</item>
        <item>Geschichte</item>
        <item>Turnen</item>
    </string-array>
    <string-array name="subjects_standard_short">
        <item>D</item>
        <item>F</item>
        <item>E</item>
        <item>M</item>
        <item>Bio</item>
        <item>Ch</item>
        <item>Ph</item>
        <item>Gg</item>
        <item>G</item>
        <item>T</item>
    </string-array>
    <string-array name="subjects_all">
        <item>Deutsch</item>
        <item>Romanisch</item>
        <item>Italienisch</item>
        <item>Französisch</item>
        <item>Englisch</item>
        <item>Mathematik</item>
        <item>Naturlehre</item>
        <item>Biologie</item>
        <item>Chemie</item>
        <item>Physik</item>
        <item>Geografie</item>
        <item>Geschichte</item>
        <item>Wirtschaft und Recht</item>
        <item>BG</item>
        <item>Musik</item>
        <item>Religion</item>
        <item>Ethik</item>
        <item>Handarbeit</item>
        <item>Werken</item>
        <item>Hauswirtschaft</item>
        <item>Informatik</item>
        <item>Tastaturschreiben</item>
        <item>Turnen</item>
        <item>Sport</item>
        <item>Latein</item>
        <item>Spanisch</item>
        <item>Russisch</item>
        <item>PAM</item>
        <item>PPP</item>
        <item>PP</item>
        <item>Philosophie</item>
    </string-array>
    <string-array name="old_prefs">
        <item>check</item>
        <item>MarkSettings</item>
        <item>KISS</item>
        <item>Kantidroid</item>
        <item>Rem</item>
        <item>mysettings</item>
    </string-array>
    <string-array name="old_db">
        <item>kontManager</item>
        <item>markManager</item>
        <item>Kantidroid</item>
    </string-array>
    <string-array name="colors">
        <item>#d50000</item>
        <item>#c51162</item>
        <item>#aa00ff</item>
        <item>#6200ea</item>
        <item>#304ffe</item>
        <item>#0091ea</item>
        <item>#00b8d4</item>
        <item>#00bfa5</item>
        <item>#00c853</item>
        <item>#8bc34a</item>
        <item>#afb42b</item>
        <item>#866e0d</item>
        <item>#f9ce1d</item>
        <item>#ff9100</item>
        <item>#6f2c17</item>
        <item>#333333</item>
    </string-array>
    <string-array name="colors_dark">
        <item>#a30000</item>
        <item>#910d49</item>
        <item>#8800cc</item>
        <item>#4d00b8</item>
        <item>#263fc9</item>
        <item>#0071b8</item>
        <item>#008ba1</item>
        <item>#008c7a</item>
        <item>#00943e</item>
        <item>#658f36</item>
        <item>#7f821f</item>
        <item>#544508</item>
        <item>#c7a418</item>
        <item>#cc7400</item>
        <item>#3d180d</item>
        <item>#000000</item>
    </string-array>
    <string-array name="colors_light">
        <item>#be4c4c</item>
        <item>#ae4474</item>
        <item>#af4ee0</item>
        <item>#6632ac</item>
        <item>#5467d3</item>
        <item>#4b9fd3</item>
        <item>#3da8b8</item>
        <item>#48a195</item>
        <item>#47ad71</item>
        <item>#87ab5e</item>
        <item>#929543</item>
        <item>#8a7c41</item>
        <item>#c8b155</item>
        <item>#ca8e3f</item>
        <item>#844733</item>
        <item>#4e4e4e</item>
    </string-array>
    <string name="kont">Kontingent</string>
    <string name="n10">10</string>
    <string name="delete">Fach löschen</string>
    <string name="delete_question">Willst du dieses Fach endgültig löschen?</string>
    <string name="delete_question_mark">Willst du diese Note löschen?</string>
    <string name="no_delete">Neues Element kann nicht gelöscht werden</string>
    <string name="subject_add">Fach hinzufügen</string>
    <string name="subject_edit">Fach bearbeiten</string>
    <string name="first_semester">1. Semester</string>
    <string name="second_semester">2. Semester</string>
    <string name="title_activity_fachview">FachviewActivity</string>
    <string name="extra">Extra</string>
    <string name="usage">Nutzung</string>
    <string name="next_mark">Nächste Note</string>
    <string name="arithmetic">Arithmetisches Mittel</string>
    <string name="grade_mark">Zeugnisnote</string>
    <string name="grades">Noten</string>
    <string name="no_promotion">Kein Promotionsfach</string>
    <string name="n_semester">. Semester</string>
    <string name="title_activity_edit_mark_dialog">EditMarkDialog</string>
    <string name="delete_mark">Note löschen</string>
    <string name="mark">Note</string>
    <string name="weighting">Gewichtung</string>
    <string name="date">Datum</string>
    <string name="new_mark">Neue Note</string>
    <string name="edit_mark">Note bearbeiten</string>
    <string name="input_sucks">Fülle alle Felder richtig aus</string>
    <string name="title_activity_edit_kont_dialog">EditKontDialog</string>
    <string name="edit_kont">Kontingent bearbeiten</string>
    <string name="new_kont">Neues Kontingent</string>
    <string name="delete_kont">Kontingent löschen</string>
    <string name="delete_question_kont">Willst du dieses Kontingent löschen?</string>
    <string name="duplicate">Eintrag existiert bereits</string>
    <string name="impossible">Diese Note sollte es nicht geben</string>
    <string name="sort">Sortieren nach</string>
    <string name="reset">Jahr abschliessen</string>
    <string name="department">Abteilung wechseln</string>
    <string name="date_format">Gib das Datum bitte im Format dd.MM.yyyy ein</string>
    <string name="ok">OK</string>
    <string name="zeugnis">Zeugnis</string>
    <string name="finish_year">Jahr abschliessen</string>
    <string name="finish_question">Willst du Noten und Kontingent endgültig zurücksetzen?</string>
    <string name="sImport">Importieren</string>
    <string-array name="sorting_entries">
        <item id="@+id/iSortName">Namen</item>
        <item id="@+id/iSortMarkDesc">Noten absteigend</item>
        <item id="@+id/iSortMarkAsc">Noten aufsteigend</item>
    </string-array>
    <string-array name="departments">
        <item id="@+id/iAbtGym">Gymnasium</item>
        <item id="@+id/iAbtHMS">Handelsmittelschule</item>
        <item id="@+id/iAbtFMS">Fachmittelschule</item>
    </string-array>
    <string name="title_activity_calc">Nächste Note</string>
    <string name="preview">Vorschau Zeugnisnote</string>
    <string name="no_marks">Noch keine Noten im Semester</string>
    <string name="needed">Benötigte Note</string>
    <string name="actual">Aktuelle Zeugnisnote</string>
    <string name="changelog">Changelog</string>
    <string name="close">Schliessen</string>
    <string name="calculator">Rechner</string>
    <string name="goal">Gewünschte Note</string>
    <string name="calculate">Berechnen</string>
    <string name="backup_local">Lokales Backup</string>
    <string name="backup_title_1">Backup lokal speichern</string>
    <string name="backup_title_2">Lokales Backup importieren</string>
    <string name="backup_msg_1">Speichert die Daten auf dem externen Speicher im Ordner \"Kantidroid\\Backup\\local\"</string>
    <string name="backup_msg_2">Importiert Daten vom Ordner \"Kantidroid\\Backup\\local\" auf dem externen Speicher</string>
    <string name="backup_success">Lokales Backup erfolgreich</string>
    <string name="backup_ext_unavailable">Speichermedium nicht verfügbar</string>
    <string name="backup_db_notfile">Datenbank nicht verfügbar</string>
    <string name="backup_db_copyfailed">Datenbank konnte nicht gesichert werden</string>
    <string name="backup_prefs_notcopied">Einstellungen konnten nicht gesichert werden</string>
    <string name="import_success">Daten erfolgreich importiert</string>
    <string name="import_nodblocal">Kein Backup der Datenbank im Ordner \"Kantidroid\\backup\\local\"</string>
    <string name="import_db_copyfailed">Datenbank konnte nicht wiederhergestellt werden</string>
    <string name="import_prefs_nolocal">Kein Backup der Einstellungen im Ordner \"Kantidroid/backup/local\"</string>
    <string name="import_prefs_notcopied">Einstellungen konnten nicht wiederhergestellt werden</string>
    <string name="backup_nologin">Dropbox Login fehlgeschlagen</string>
    <string name="backup_db_success">Dropbox Backup erfolgreich</string>
    <string name="backup_db_notfound">Datei nicht mehr im Zwischenverzeichnis</string>
    <string name="backup_db_error">Datei konnte nicht in Dropbox gespeichert werden - keine Internetverbindung?</string>
    <string name="backup_db_inputstream">InputStream konnte nicht geschlossen werden</string>
    <string name="backup_db_future">Rückgabewert nicht erhalten</string>
    <string name="backup_db_nobackup">Noch kein Backup importiert/erstellt</string>
    <string name="backup_db_msg">Letztes Backup vom</string>
    <string name="backup_db_backingup">Backup läuft…</string>
    <string name="backup_db_importing">Daten werden importiert…</string>
    <string name="import_db_fail">Backup nicht gefunden - Keine Internetverbindung oder kein Backup auf Dropbox vorhanden</string>
    <string name="import_db_notfound">Zieldatei konnte nicht gefunden werden</string>
    <string-array name="weights">
        <item>1.0 Ganz</item>
        <item>0.5 Halb</item>
        <item>2.0 Doppelt</item>
    </string-array>
    <string name="title_activity_timetable">TimetableActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="timetable">Stundenpläne</string>
    <string name="class_hint">Klasse (Bsp.: 6 Gi)</string>
    <string name="timetable_classselection">Klasse wählen</string>
    <string name="download">Download</string>
    <string name="timetable_downloadtitle">Downloads</string>
    <string name="timetable_nothinghere">Noch keine Downloads</string>
    <string name="timetable_error_empty">Gib eine Klasse ein</string>
    <string name="timetable_error_noclass">Gib eine korrekte Klasse ein</string>
    <string name="timetable_success">Stundenplan heruntergeladen</string>
    <string name="timetable_error_filesystem">Problem mit dem Dateisystem</string>
    <string name="timetable_nosuchclass">Kein Stundenplan für diese Klasse gefunden oder keine Internetverbindung</string>
    <string name="timetable_deletequestion">Willst du diesen Stundenplan löschen?</string>
    <string name="timetable_noreader">Kein PDF Reader installiert</string>
    <string name="title_activity_feedback">Feedback</string>
</resources>