<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="@drawable/ic_overview"
            android:title="@string/overview" />
        <item
            android:id="@+id/nav_kiss"
            android:icon="@drawable/ic_kiss"
            android:title="@string/kiss" />
        <item
            android:id="@+id/nav_backup"
            android:icon="@drawable/ic_backup"
            android:title="@string/backup" />
        <item
            android:id="@+id/nav_subjects"
            android:icon="@drawable/ic_subjects"
            android:title="@string/subjects" />
    </group>

    <group>
        <!-- Test without title -->
        <item android:title="Extra">
            <menu>
                <item
                    android:id="@+id/nav_feedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback" />
                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_about"
                    android:title="@string/about" />
            </menu>
        </item>
    </group>
</menu>