<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin"
    android:id="@+id/rlEdit">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/et_subj_name"
        android:hint="@string/name"
        android:inputType="textCapSentences"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:id="@+id/et_subj_short"
        android:hint="@string/name_short"
        android:layout_below="@id/et_subj_name"
        android:inputType="textCapWords"
        android:imeOptions="actionDone"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_subj_name"
        android:text="@string/promotion"
        android:id="@+id/cbCounts"
        android:layout_alignBaseline="@id/et_subj_short"
        android:layout_alignParentRight="true"
        android:checked="true"/>

    <View
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:id="@+id/vColor"
        android:background="@color/c1"
        android:layout_below="@id/et_subj_short"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="5dp"
        android:tag="#d50000"
        android:layout_marginBottom="@dimen/widget_margin_large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_subj_short"
        android:layout_toRightOf="@id/vColor"
        android:layout_marginTop="16dp"
        android:text="@string/color"
        android:layout_marginLeft="@dimen/widget_margin_large"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vColor"
        android:text="@string/kont"
        android:layout_marginTop="@dimen/widget_margin_large"
        android:id="@+id/tvKont"/>

    <android.support.v7.widget.SwitchCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/tvKont"
        android:layout_alignParentRight="true"
        android:checked="true"
        android:id="@+id/scCounts"
        />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tvKont"
        android:layout_marginTop="@dimen/widget_margin_large"
        android:weightSum="6"
        android:id="@+id/rgKont">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n2"
            android:id="@+id/rb2"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n4"
            android:id="@+id/rb4"
            android:checked="true"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n6"
            android:id="@+id/rb6"
            android:layout_weight="1"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/n8"
            android:id="@+id/rb8"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb10"
            android:text="@string/n10"
            android:layout_weight="1"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb12"
            android:text="@string/n12"
            android:layout_weight="1"/>

    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rgKont"
        android:layout_alignParentRight="true"
        android:id="@+id/bAdd"
        android:layout_marginTop="@dimen/widget_margin_large"
        android:text="@string/add"
        style="@style/AppCompat.Button.Flat.Common"/>

</RelativeLayout>