<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rlEdit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_horizontal_margin">

            <EditText
                android:id="@+id/etMark"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mark"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal" />

            <View
                android:id="@+id/vDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/etMark"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:background="@color/divider" />

            <ImageView
                android:id="@+id/ivWeight"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/vDivider"
                android:layout_marginRight="@dimen/widget_margin_large"
                android:layout_marginTop="9dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_timetable"
                android:tint="@color/red_dark" />

            <EditText
                android:id="@+id/etWeight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vDivider"
                android:layout_toRightOf="@id/ivWeight"
                android:hint="@string/weighting"
                android:imeOptions="actionDone"
                android:inputType="numberDecimal"
                android:text="1.0" />

            <View
                android:id="@+id/vDivider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@id/etWeight"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_toRightOf="@id/ivName"
                android:background="@color/divider" />

            <ImageView
                android:id="@+id/ivDate"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_below="@id/vDivider2"
                android:layout_marginRight="@dimen/widget_margin_large"
                android:layout_marginTop="9dp"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_timetable"
                android:tint="@color/red_dark" />

            <EditText
                android:id="@+id/etDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/vDivider2"
                android:layout_toRightOf="@id/ivDate"
                android:hint="@string/date"
                android:imeOptions="actionDone"
                android:inputType="date" />

            <TextView
                android:id="@+id/tvSem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/etDate"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="@dimen/widget_margin"
                android:layout_toRightOf="@id/ivDate" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>